update almost done

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -205,7 +205,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 	
 Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment. This is seen across genders, but is only significant for the female and pooled samples. The males who are enrolled in alternative preschool have mothers with higher IQ scores, but lower parental income indicating lack of spousal support, which is evident by the fewer number of fathers present in that same group. Those who were enrolled in alternative preschools also had more siblings.
 
-Figure~\ref{fig:salmonella} shows enrollment by age and the average months of enrollment by age for the control-group children who enrolled in program alternatives. Enrollment increases with the age of children. Figure~\ref{fig:treatsubcare_2} shows the proportion of the control sample enrolled in an alternative at a given age who persist in alternative care at the next age. Once enrolled, they generally stay enrolled and attend an alternative for a full year.
+Figure~\ref{fig:salmonella} shows enrollment by age and the average months of enrollment by age for the control-group children who enrolled in program alternatives. Enrollment increases with the age of children. Figure~\ref{fig:treatsubcare_2} shows the fraction of children enrolled in preschool by age. As control children age, they are more likely to enter childcare.
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -218,10 +218,10 @@ Figure~\ref{fig:salmonella} shows enrollment by age and the average months of en
 \begin{subfigure}[h]{0.49\textwidth}
 		\centering
 		\caption{Enrollment Dynamics} \label{fig:treatsubcare_2}
-		\includegraphics[width=\textwidth]{output/abccare_Vprobs.eps}
+		\includegraphics[width=\textwidth]{output/abccare_Vfractimes.eps}
 \end{subfigure}%
 \footnotesize \justify
-Note: Panel (a) displays the fraction of the ABC/CARE control group enrolled in alternatives by age on the left axis and average number of months in alternative preschool by age in the right axis. Panel (b) displays the fraction of ABC/CARE control-group children enrolled in alternatives, conditional on being enrolled in the previous age (at least one month).\\
+Note: Panel (a) displays the fraction of the ABC/CARE control group enrolled in alternatives by age on the left axis and average number of months in alternative preschool by age in the right axis. Panel (b) displays the fraction of children in the ABC/CARE control groups enrolled in alternatives 20\%, 40\%, 60\%, 80\%, and 100\% of the time, from ages 0 to 5.\\
 \end{sidewaysfigure}
  
 
