--- a/AppOutput/Health/crossval_binhlth.tex
+++ b/AppOutput/Health/crossval_binhlth.tex
@@ -1,10 +1,10 @@
 \begin{tabular}{p{1.2in}*{3}{c}*{3}{c}*{3}{c}}
-\hline
+\toprule
  \multicolumn{1}{c}{} & \multicolumn{3}{c}{2001} & \multicolumn{3}{c}{2007} & \multicolumn{3}{c}{2013} \\
-\hline
+\midrule
  \multicolumn{1}{c}{} & FAM & PSID & & FAM & PSID & & FAM & PSID & \\
- \multicolumn{1}{l}{Outcome} & mean & mean & \textit{p} & mean & mean & \textit{p} & mean & mean & \textit{p} \\
-\hline
+ \multicolumn{1}{l}{Outcome} & mean & mean & $p$-value & mean & mean & $p$-value & mean & mean & $p$-value \\
+\midrule
 Any ADLs&0.079&0.064&0.000&0.102&0.126&0.000&0.124&0.142&0.004\\
 Any IADLs&0.098&0.113&0.001&0.111&0.130&0.000&0.129&0.170&0.000\\
 Cancer&0.041&0.036&0.034&0.071&0.059&0.002&0.101&0.103&0.667\\
@@ -13,5 +13,5 @@ Heart Disease&0.098&0.106&0.095&0.135&0.152&0.002&0.175&0.173&0.792\\
 Hypertension&0.185&0.174&0.067&0.287&0.272&0.030&0.385&0.410&0.004\\
 Lung Disease&0.038&0.039&0.606&0.062&0.058&0.190&0.084&0.091&0.174\\
 Stroke&0.019&0.021&0.412&0.027&0.034&0.015&0.037&0.049&0.001\\
-\hline
+\bottomrule
 \end{tabular}
