--- a/AppOutput/Health/crossval_risk.tex
+++ b/AppOutput/Health/crossval_risk.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{p{1.2in}*{3}{c}*{3}{c}*{3}{c}}
-\hline
+\toprule
  \multicolumn{1}{c}{} & \multicolumn{3}{c}{2001} & \multicolumn{3}{c}{2007} & \multicolumn{3}{c}{2013} \\
-\hline
+\midrule
  \multicolumn{1}{c}{} & FAM & PSID & & FAM & PSID & & FAM & PSID & \\
- \multicolumn{1}{l}{Outcome} & mean & mean & \textit{p} & mean & mean & \textit{p} & mean & mean & \textit{p} \\
-\hline
+ \multicolumn{1}{l}{Outcome} & mean & mean & $p$-value & mean & mean & $p$-value & mean & mean & $p$-value \\
+\midrule
 BMI&26.690&26.723&0.671&27.379&27.397&0.850&27.848&27.639&0.039\\
 Current smoker&0.197&0.200&0.521&0.162&0.167&0.461&0.136&0.146&0.108\\
 Ever smoked&0.481&0.513&0.000&0.479&0.525&0.000&0.472&0.531&0.000\\
-\hline
+\bottomrule
 \end{tabular}
