--- a/AppOutput/Health/crossval_unweighted.tex
+++ b/AppOutput/Health/crossval_unweighted.tex
@@ -1,10 +1,10 @@
 \begin{tabular}{p{1.2in}*{3}{c}*{3}{c}*{3}{c}}
-\hline
+\toprule
  \multicolumn{1}{c}{} & \multicolumn{3}{c}{2001} & \multicolumn{3}{c}{2007} & \multicolumn{3}{c}{2013} \\
-\hline
+\midrule
  \multicolumn{1}{c}{} & FAM & PSID & & FAM & PSID & & FAM & PSID & \\
- \multicolumn{1}{l}{Outcome} & mean & mean &\textit{p} & mean & mean &\textit{p} & mean & mean &\textit{p} \\
-\hline
+ \multicolumn{1}{l}{Outcome} & mean & mean & $p$-value & mean & mean & $p$-value & mean & mean & $p$-value \\
+\midrule
 Died&0.014&0.018&0.013&0.019&0.023&0.133&0.027&0.025&0.514\\
-\hline
+\bottomrule
 \end{tabular}
