--- a/AppOutput/Health/external_pop.tex
+++ b/AppOutput/Health/external_pop.tex
@@ -1,7 +1,7 @@
 \begin{tabular} {ccccc}
-\hline
+\toprule
 Year & Census 25+ & FAM 25+ & Census 65+ & FAM 65+  \\
-\hline 
+\midrule 
 2009&202.1&202.0&39.6&39.4\\
 2011&206.6&206.5&41.4&41.0\\
 2013&211.0&210.5&44.7&43.9\\
@@ -23,5 +23,5 @@ Year & Census 25+ & FAM 25+ & Census 65+ & FAM 65+  \\
 2045&272.2&269.1&81.3&78.9\\
 2047&275.3&272.2&82.2&79.7\\
 2049&278.4&275.2&83.2&80.3\\
-\hline 
+\bottomrule 
 \end{tabular} 
