--- a/Appendices/Health/validation.tex
+++ b/Appendices/Health/validation.tex
@@ -25,10 +25,10 @@ Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statis
 \centering
 \footnotesize
 \input{AppOutput/Health/crossval_unweighted.tex}
-%\begin{tablenotes}
-%\footnotesize
-%\item Note: 
-%\end{tablenotes}
+\begin{tablenotes}
+\footnotesize
+\item Note: This cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. This table compares outcomes between the simulated (FAM) and actual (PSID) populations.
+\end{tablenotes}
 \end{threeparttable}
 \end{table}
 
@@ -39,6 +39,10 @@ Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statis
 \centering
 \footnotesize
 \input{AppOutput/Health/crossval_demog.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: This cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. This table compares outcomes between the simulated (FAM) and actual (PSID) populations.
+\end{tablenotes}
 \end{threeparttable}
 \end{table}
 
@@ -49,6 +53,10 @@ Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statis
 \centering
 \footnotesize
 \input{AppOutput/Health/crossval_binhlth.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: This cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. This table compares outcomes between the simulated (FAM) and actual (PSID) populations.
+\end{tablenotes}
 \end{threeparttable}
 \end{table}
 
@@ -59,6 +67,10 @@ Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statis
 \centering
 \footnotesize
 \input{AppOutput/Health/crossval_risk.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: This cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. This table compares outcomes between the simulated (FAM) and actual (PSID) populations.
+\end{tablenotes}
 \end{threeparttable}
 \end{table}
 
@@ -72,6 +84,10 @@ Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statis
 \centering
 \footnotesize
 \input{AppOutput/Health/external_pop.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Comparison between Census population projections and a FAM simulation of a full population starting in 2009 through 2049.
+\end{tablenotes}
 \end{threeparttable}
 \end{table}
 
